# StampDetectOCR_Tensorflow

./: CMakeLists.txt  README.md
src/: DetectNet.cpp  DetectNet.h  OCRNet.cpp  OCRNet.h  PutText.h  dataStructures.h  main.cpp
